display other recipe part and add button navigation